--- a/app/templates/token.html
+++ b/app/templates/token.html
@@ -17,7 +17,7 @@
  -->
 
 <html>
-<title style="color:#3c3c3c; font-family: 'Avenir Next World Regular'">Cymbal Health  - Fitbit Registration</title>
+<title style="color:#3c3c3c; font-family: 'sans-serif'">ME-TIME studie - Apparaat Registratie</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -33,18 +33,25 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Header -->
 <header class="w3-container w3-margin">
-  <h1 style="color:#3c3c3c; font-family: 'Avenir Next World Regular'"><b>Cymbal Health - Fitbit Registration</b></h1>
+  <h1 class="header-text" style="font-family: 'sans-serif'"><b>ME-TIME studie - Apparaat Registratie</b></h1>
 </header>
+<img class="background-image"></img>
 
 
   <div class="w3-card-4 w3-margin w3-white">
     <div class="w3-container">
-      <h3 style="color:#3c3c3c; font-family: 'Avenir Next World Regular'"><b>Registration and Authorization was Successful!</b></h3>
+      <h3 style="font-family: 'sans-serif'"><b>Registratie en authorisatie was succesvol!</b></h3>
     </div>
 
     <div class="w3-container">
 
-      <p style="color:#3c3c3c; font-family: 'Avenir Next World Regular'">You have successfully registered with the Cymbal Health - Fitbit</p>
+      <p style="font-family: 'sans-serif'">U heeft uw apparaat succesvol geregistreerd voor de ME-TIME studie.</p>
+    </div>
+
+    <div class="haga-footer" data-position="fixed">
+      <div class="haga-footer-image-space">
+        <img id="haga-footer-image" src="../static/img/green_overlay.svg">
+      </div>
     </div>
 
 </div>
