--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -16,37 +16,51 @@
 
 
 :root {
-    --small-spacing: 0.5rem;
-    --large-spacing: 1rem;
-    --large-font-size: 3rem;
+	--small-spacing: 0.5rem;
+	--large-spacing: 1rem;
+	--large-font-size: 3rem;
     --large-card-size: 250px;
     --large-image-size: 75%;
 }
 
 @media (min-width: 576px) {
-    :root {
-        --small-spacing: 1rem;
-        --large-spacing: 2rem;
-        --large-font-size: 3rem;
+	:root {
+		--small-spacing: 1rem;
+		--large-spacing: 2rem;
+		--large-font-size: 3rem;
         --large-card-size: 500px;
         --large-image-size: 60%;
-    }
+	}
 }
 
-.login-text {
+.home-button-menu{
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+}
+
+.header-text {
     font-size: var(--large-font-size);
-    color: rgba(23, 15, 95, 1);
+    color: rgb(255, 255, 255);
     text-transform: none;
-    font-family: 'Avenir Next World Regular';
+    font-family: "myriad-pro","arial","sans-serif";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    animation: fadeIn 1.2s;
+}
+
+.paragraph-text {
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .login {
-
     padding: var(--small-spacing) var(--large-spacing);
-    margin: var(--small-spacing) auto var(--large-spacing);
+	margin: var(--small-spacing) auto  var(--large-spacing);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +68,7 @@
 }
 
 .card {
-    border-radius: 20px;
+    box-shadow: 5px, 5px;
 }
 
 .input-box {
@@ -62,37 +76,73 @@
 }
 
 .background-image {
-    background-image: url('../img/device-connect-login.png');
+    background-image: url('../img/haga_inspired_background_bright_2.png');
     background-repeat: no-repeat;
-    background-position: left bottom;
-    background-attachment: fixed;
-    background-size: var(--large-image-size) auto;
+    background-size: cover;
+    background-position: center;
+
+    position:fixed;
+    padding:0;
+    margin:0;
+
+    top:0;
+    left:0;
+
+    width: 100%;
+    height: 100%;
+
+    z-index: -2;
 }
 
 .registered-btn {
-    color: green;
+    color: #78B800;
     text-align: center;
-    border: green;
+    border: #78B800;
     padding-bottom: 1rem;
     background-color: white;
 }
 
-.login-btn {
-    justify-content: center;
-    flex-direction: row;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    justify-content: center;
-    align-items: center;
-    width: 220px;
-    padding: 10px;
-    box-shadow: 3px 3px 3px rgb(170, 170, 170);
-    border-radius: 15px;
+.haga-footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100vw;
+    background-color: #78B800;
+    color: white;
+    text-align: center;
+
+    z-index: -1;
+  }
+
+.haga-footer-image-space{
+    width:100vw;
+    height: 50px;
+}
+.haga-footer-image-space, div .haga-footer-image {
+    position: relative;
 }
 
-.btn-text {
-    justify-content: center;
+.round-button{
+    background-color: #78B800;
+    border: none;
+    color: white;
     padding: 10px;
-    font-family: 'Poppins', sans-serif;
-    color: rgb(85, 85, 85);
+    text-align: center;
+    text-decoration: none;
+    margin: 4px 2px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    float: right;
+    cursor: pointer;
+
+    /* display: inline-block; */
+}
+
+.embed-container{
+    background-color: #eef0ff;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
