--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,7 +17,7 @@
  -->
 
 <html>
-<title>Cymbal Health - Device Registration</title>
+<title>ME-TIME studie - Apparaat Registratie</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -29,57 +29,84 @@
 <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <style>
-  body,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    font-family: "Raleway", sans-serif
-  }
+body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
-
-<body class="w3-light-grey">
-  <!-- w3-content defines a container for fixed size centered content,
+<body class="w3-light-grey" >
+  <img class="background-image"></img>
+<!-- w3-content defines a container for fixed size centered content,
 and is wrapped around the whole page content, except for the footer in this example -->
-  <div class="w3-content" style="max-width:1400px">
-    <!-- Header -->
-    <header class="w3-container w3-margin">
+<div class="w3-content" style="max-width:1400px">
+<!-- Header -->
+<header class="w3-container w3-margin">
+  <div class="w3-row">
+    <h1 class="header-text" style="font-family: 'sans-serif'"> ME-Time studie Portal</h1>
+    <p class="paragraph-text">{{user["name"]}} | {{user.email}}</p>
+    
+    <div class="home-button-menu">
+
+      <form method="GET" action={{url_for("frontend_bp.logout")}}>
+        <input type="submit" value="Logout"> 
+      </form> <span style="margin-left: 5px;"></span> <button id="delete_account">Verwijder Account</button>
+
+    </div>
+  </div>
+</header>
+  <div class="w3-margin w3-white card">
+    <div class="w3-container">
+      <h3 style="color:#3c3c3c; font-family: 'sans-serif'"><b>Fitbit Registratie en Authorisatie</b></h3>
+    </div>
+    <div class="w3-container w3-card-4 card">
+      <h4>Fitbit</h4>
+      <p style="color:#3c3c3c; font-family: 'sans-serif'">De volgende link kan worden gebruikt om deze applicatie toestemming te geven uw Fitbit data op te halen. U zal worden doorgestuurd naar Fitbit's authorisatie pagina om de registratie af te ronden.</p>
+      <p style="color:#3c3c3c; font-family: 'sans-serif'">Geef alstublieft toestemming voor het gebruik van alle data die de Fitbit verzameld.</p> 
       <div class="w3-row">
-        <h1 style="font-weight: 250;
-      color: rgba(23, 15, 95, 1);
-      text-transform: none; font-family: 'Avenir Next World Regular'"><b>Cymbal Health Portal</b></h1>
-        <p>{{user["name"]}} | {{user["email"]}}</p>
-        <form method="GET" action={{url_for("frontend_bp.logout")}}>
-          <input type="submit" value="Logout">
-        </form> <button id="delete_account">Delete Account</button>
-      </div>
-    </header>
-    <div class="w3-margin w3-white card">
-      <div class="w3-container">
-        <h3 style="color:#3c3c3c; font-family: 'Avenir Next World Regular'"><b>Device Registration and Authorization</b>
-        </h3>
-      </div>
-      <div class="w3-container w3-card-4 card">
-        <h4>Fitbit</h4>
-        <p style="color:#3c3c3c; font-family: 'Avenir Next World Regular'">The following link will register you with the
-          application and take you to Fitbit's authorization page where you will be able to complete registration with
-          your Fitbit account</p>
-        <p style="color:#3c3c3c; font-family: 'Avenir Next World Regular'">Please authorize Cymbal Health to access all
-          of your Fitbit data</p>
-        <div class="w3-row">
-          <div class="w3-col m8 s12">
-            {% if not is_fitbit_registered %}
-            <h4>
-              <a id="fitbit_link" type="button" style="color:#3c3c3c; font-family: 'Avenir Next World Regular'" href={{
-                url_for('fitbit.login') }}>Register Fitbit</a>
-            </h4>
-            {% else %}
-            <button class="registered-btn" id="fibit_register">Registered</button> |
-            <a href={{ url_for('fitbit_auth_bp.device_delete') }}>Unregister</a>
-            {% endif %}
+        <div class="w3-col m8 s12">
+          {% if not is_fitbit_registered %}
+
+          <div>
+            <form action={{ url_for('fitbit.login') }}>
+              <button class="round-button" id="fitbit_link" type="submit" 
+              style="font-family: 'sans-serif'; float: inherit;"> <b>Fitbit Registreren</b></button>
+            </form>
           </div>
+
+          {% else %}
+
+          <div>
+            <h4><b>FitBit Registered</b></h4>
+            <p style="color:#3c3c3c; font-family: 'sans-serif'">Deel het volgende ID met uw behandelend arts, hierdoor kunnen gepseudonimiseerd andere typen gezondheidsdata worden gekoppeld aan de verzamelde Fitbit data</p>
+            <p style="color:#3c3c3c; font-family: 'sans-serif'">Fitbit ID: {{fitbit_id}}<span style="color:#f33e3e; font-family: 'sans-serif'">{{control_number}}</span></p>
+            {% if is_missing_scopes %}
+            <h4 style="color:#f33e3e;"><b>Toestemmings waarschuwing</b></h4>
+            <p style="color:#3c3c3c; font-family: 'sans-serif'">Er is geen toestemming gegeven voor het gebruik van de volgende gegevens: <b>{{missing_scopes}}</b>. Hierdoor kunnen niet alle nodige gegevens worden verzameld waardoor de functionaliteiten van dit systeem niet optimaal werken.</p>
+            <p style="color:#3c3c3c; font-family: 'sans-serif'">Deregistreer uw Fitbit en voer de koppeling opnieuw uit en geef hierbij toestemming voor het gebruik van de volgende typen data: <b>{{required_scopes}}</b>.</p>
+            {% endif %}
+            <form action={{ url_for('fitbit_auth_bp.next_device') }}>
+              <button class="round-button" id="fitbit_register" type="submit" 
+              style="font-family: 'sans-serif'; float: inherit; background-color: #d8db24;"><b>Registreer nieuwe Fitbit</b></button>
+            </form>
+          </div>
+          {% endif %}
+          {% if registered_devices %}
+          <div>
+            
+              <h4><b>Geregistreerde Fitbits</b></h4>
+              {% for device_id, document_id in registered_devices %}
+                <form action={{ url_for('fitbit_auth_bp.deregister_device', document_id=document_id) }}>
+                  <button class="round-button" id="fitbit_register" type="submit" 
+                  style="font-family: 'sans-serif'; float: inherit; background-color: #DB2424;"><b>Deregisteer device {{device_id}}</b></button>
+                </form>
+              {% endfor %}
+            
+          </div>
+          {% endif %}
         </div>
       </div>
     </div>
   </div>
+
+  <div class="haga-footer" data-position="fixed">
+    <div class="haga-footer-image-space">
+      <img id="haga-footer-image" src="../static/img/green_overlay.svg">
+  </div>
+</div>
